k3s/minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: gic-chathub
spec:
  selector:
    matchLabels:
      app: minio
  serviceName: minio
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: registry.deti/gic-chathub/minio:latest
          command:
            - ../../minio
            - server
            - /data/storage
            - '--console-address'
            - ':9001'
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-persistent-storage
              mountPath: /data/tailchat/storage
      volumes:
        - name: minio-persistent-storage
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: gic-chathub
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
