k3s/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: gic-chathub
spec:
  selector:
    matchLabels:
      app: website
  replicas: 3
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: registry.deti/gic-chathub/website:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: website-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: website-volume
          persistentVolumeClaim:
            claimName: static-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: website
